--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: ThStave
+Theme Name: stave
 Author: You
 Version: 1.0
 Description: Classic WordPress theme with Tailwind CSS and a React Gutenberg block.
