--- a/blocks/project-carousel/ProjectCarousel.css
+++ b/blocks/project-carousel/ProjectCarousel.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     height: 33vh;
     background-color: var(--color-background);
 }
@@ -14,6 +14,9 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    width: 100%;         
+    max-width: 1300px;     
+    box-sizing: border-box; 
 }
 
 .projects-block .container .projects-subtitle {
@@ -25,8 +28,11 @@
 }
 
 .projects-block .container .projects-slider-wrapper {
-    max-width: 1200px;
-    width: auto;
+    padding: 2em;
+    width: 100%;             
+    max-width: 1200px;        
+    margin: 0 auto;
+    box-sizing: border-box;  
     position: relative;
 }
 
