--- a/blocks/project-carousel/ProjectCarousel.css
+++ b/blocks/project-carousel/ProjectCarousel.css
@@ -42,7 +42,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 33vh;
   background-color: var(--color-background);
 }
